# RhythmDoctor.EditorLaunch

./: Patch.cs  Plugin.cs  README.md  RhythmDoctor.EditorLaunch.csproj
Launcher/: Cargo.toml
Launcher/src/: built.rs  config_wrapper.rs  macos.rs  main.rs  rhythm_doctor.rs
Plugin/: RhythmDoctor.EditorLaunch.csproj
